Update vulnerable dependencies

--- a/samples/msal-browser-samples/HybridSample/package.json
+++ b/samples/msal-browser-samples/HybridSample/package.json
@@ -11,12 +11,12 @@
     "@azure/msal-browser": "^3.0.0-beta.0",
     "@azure/msal-node": "^2.0.0-beta.0",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "^1.4.4",
+    "debug": "^2.6.9",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "hbs": "~4.0.4",
+    "hbs": "^4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
